# dricas-doces-e-salgados-lojinha

./: README.md  docker-compose.yml
src/back/: README.md  main.py  pyproject.toml
src/back/config/: database.py
src/back/migrations/: env.py
src/back/migrations/versions/: e5f314697c5a_add_updated_at_to_order.py  f237ccd29b91_initial_schema.py
src/back/models/: base.py  enums.py  order.py  order_item.py  product.py
src/back/routers/: orders.py  products.py
src/front/: package-lock.json  package.json  vite.config.ts
src/front/src/: App.tsx  index.css  main.tsx
src/front/src/api/: client.ts
src/front/src/components/: CartSidebar.module.css  CartSidebar.tsx  PaymentModal.module.css  PaymentModal.tsx  ProductCard.module.css  ProductCard.tsx
src/front/src/store/: cartStore.ts
src/front/src/types/: api.ts
